--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,7 @@
 <ul>
   {{#each burgers}}
   {{#if this.devoured}}
-  	<li>
+  	<li class ="ingredients">
   	   <p> {{this.burger_name}}</p>
 
   	</li>
