--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+	<head class= "head">
 		<title>Burger</title>
+		<link rel="stylesheet" href="/assets/css/burger_style.css" >
+		<img src="/assets/img/grilling-clipart-animated-13.png" style="width:100px;height:200px;">
 	</head>
-	<body>
+	<body class="body">
 		{{{ body }}}
         
 	</body>
